--- a/Lab1_PyTorch_and_ANNs.ipynb
+++ b/Lab1_PyTorch_and_ANNs.ipynb
@@ -2110,6 +2110,29 @@
       "metadata": {
         "id": "Z0zM32qXJIs_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"done!\")"
+      ],
+      "metadata": {
+        "id": "goghbOMRKhxR",
+        "outputId": "f2b43dc7-3f06-4eab-ab87-ee506d31d385",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "done!\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
