--- a/Lab1_PyTorch_and_ANNs.ipynb
+++ b/Lab1_PyTorch_and_ANNs.ipynb
@@ -1615,7 +1615,9 @@
         "import pandas as pd\n",
         "\n",
         "data = {\n",
-        "    'Configuration': ['Original', 'Hidden Units: 100', 'Hidden Units: 10', 'Activation: Sigmoid', 'Activation: Tanh', 'LR: 0.1', 'LR: 0.000001'],\n",
+        "    'Configuration': ['Original', 'Hidden Units: 100', 'Hidden Units: 10',\n",
+        "                      'Activation: Sigmoid', 'Activation: Tanh', 'LR: 0.1',\n",
+        "                      'LR: 0.000001'],\n",
         "    'Hidden Units': [30, 100, 10, '-', '-', '-', '-'],\n",
         "    'Activation Type': ['ReLU', '-', '-', 'Sigmoid', 'Tanh', '-', '-'],\n",
         "    'Learning Rate': [0.005, '-', '-', '-', '-', 0.1, 0.000001],\n",
@@ -2117,11 +2119,11 @@
         "print(\"done!\")"
       ],
       "metadata": {
-        "id": "goghbOMRKhxR",
-        "outputId": "f2b43dc7-3f06-4eab-ab87-ee506d31d385",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "goghbOMRKhxR",
+        "outputId": "f2b43dc7-3f06-4eab-ab87-ee506d31d385"
       },
       "execution_count": 14,
       "outputs": [
